2024-12-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/_divuint.s,
	  src/f8/peeph.def:
	  Save a few bytes in f8 division support routines.
	* src/f8/gen.c:
	  f8 codegen improvements.

2024-02-29 Gabriele Gorla <gorlik@yahoo.com>

	* doc/sdccman.lyx:
      additional documentation for the MOS6502 port. Addresses:
      - bug #3749
      - bug #3787
      - support req #199
      - feature request #931

2024-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Improve f8 codegen for some operations.

2024-12-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/largeoddstruct.c.in:
	  Disable test for host, since we can't assume C23 support in host compilers yet. Disable for -mmcs51 --stack-auto, due to bug #3804.

2024-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Some assertions to catch bugs like #3803 a bit earlier.

2024-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc,
	  src/f8/gen.c,
	  src/f8/peep.c,
	  support/regression/tests/largeoddstruct.c.in:
	  Change destination operand to y-relative for f8 ld(w)i instruction.
	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Safeguards against accidential use of ld r, r instructions for Rabbits.

2024-12-01 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCast.c:
	  Fix typeofOp not using the actual decorated tree.

2024-11-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/ralloc2.cc:
	  pdk stack allocation improvement.
	* src/f8/gen.c:
	  Fix a corner case in f8 block move codegen optimization.

2024-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/f8/ralloc2.cc:
	  Small f8 codegen and stack allocation improvements.

2024-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c: